@@ -1,22 +1,24 @@
-8f703d850ed8da7c96d0e1dc970fb3b6 *DESCRIPTION
+7fd643155b8f5cb82262483563c3d689 *DESCRIPTION
 dad41e78c1e71a758d15f6c52ea59f26 *NAMESPACE
 a4674dc6130e48bb9932cfd196089224 *R/chmethod.R
 404454972786974e2f1f280f046fd709 *R/kaczmarz.R
 de6bb59e08b341d2f3a2d54c2531b37e *R/lfe.R
 9c5bb0dcc59bd02bd6fea406462904ee *R/utils.R
+9208e2c2e0fb6e9fc8ff0715b0f84411 *aclocal.m4
 34101ed5b91d2dc3affe2492cc54fd62 *config.guess
 588158fcdcf4b03387aeb9a210e9eb0b *config.sub
 a1d1095d1b00f3fef3192518b20e6f76 *configure
+af00a4e718d815e7dc4de79438e54a3f *configure.ac
 d41d8cd98f00b204e9800998ecf8427e *configure.win
 443d41e5d27c63a12cee80111b623083 *exec/lfescript
 cde9cfb9b5a5687b63effdf0db6c2b60 *inst/CITATION
 046c064a0ee31218120e934f6d3aa6ff *inst/TODO
-d781d8f13552e572324998d9b3dc1d89 *inst/doc/CHANGELOG
+242bd1e63c0bbe5cd3c3980ba1e57b8e *inst/doc/CHANGELOG
 4eada30e1432a55caec633f6205713c2 *inst/doc/gen2.R
 d73aa42e460d4b153ce34ffe1b194674 *inst/doc/lfeguide.txt
 2b3fce7671f957dcaf0bec1fb808ecf5 *inst/doc/lfehow.Rnw
-646bcd56cc952b4bf6226ada1a82de0f *inst/doc/lfehow.pdf
-edc68bab9a32c28042edc2f358699ebe *inst/doc/presentation.pdf
+02da448e944e53f97adc34ba40ce445c *inst/doc/lfehow.pdf
+87937ddc92e90247f6fcf74b7fc9bac3 *inst/doc/presentation.pdf
 d0676ee9e2f5a1ebba4b1af1bafaaa9e *inst/doc/test2.lfe
 2be23ece05d57e5c9112afee8bd5cae8 *man/btrap.Rd
 8ece68ac17caeae08d3313290f45548b *man/compfactor.Rd
@@ -30,7 +32,7 @@ ea1041d1fbc79c254c0c3ea317371867 *man/demeanlist.Rd
 0476eb941488a6a23113692e802ffa0d *shtool
 c8622d3d9717d65ed99386564a45190b *src/Makevars
 a54496c4d61c868969ece64ec050d38a *src/Makevars.in
-fc8a4973d350a1143a9ebc9e7c6483f4 *src/lfe.c
+75d4d02b8c029b1cc77f55332462144a *src/lfe.c
 6a91b3ef040e0fbd5a8c98f3c16ba6c5 *tests/comparelm.R
 f844bfc9c3369114cf06724b17bf8d6d *tests/comparelm.Rout.save
 31dfb137f837a0a5dc21d2c9fcdeb52a *tests/degenerate.R
